--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Abdul Razzak",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
