--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.3.0",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.3.5",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1",
